--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body{
   margin: auto;
-  width: 50%;
   padding: 10px;
   border-left: solid;
   border-right: solid;
@@ -10,32 +9,43 @@ body{
 }
 h1  {
   margin-top: 20px;
+  margin-left: 400px;
+  margin-right: 400px;
   border: solid;
   text-align: center;
-  background-image: linear-gradient(#6699FF,#00FF99);
   text-shadow: 2px 2px;
 }
 .input-row{
-  padding-left: 100px;
   text-align: center;
   text-shadow: 1px 1px;
 }
-#fInput{
+
+#fImput{
+  color: transparent;
   margin-left: 50px;
-  padding-bottom: 10px;
-  text-shadow: 1px 1px;
+  width: 87px;
+  border: solid red;
+  margin-bottom: 10px;
 }
-#sInput{
+#sImput{
+
+  color: transparent;
   margin-left: 59px;
-  padding-bottom: 10px;
-  border: none;
+  margin-bottom: 10px;
+  border: solid green;
+  width: 87px;
 
 }
 #b{
   margin-right: 12px;
-  background-image: linear-gradient(#33cc33,#8FAD14);
   text-align: center;
   font-weight: bold;
-  border: none;
-
+  border: solid blue;
+}
+.thisImg {
+  margin-left: 80px;
+  padding-left:80px;
+  position: absolute;
+  top: -30px;
+  left: 0px;
 }
